<resources>
    <string name="app_name">MillennialsVit</string>
    <string name="logo">logo</string>
    <string name="popcast">POPCAST</string>
    <string name="meditation">MEDITATION</string>
    <string name="article">ARTICLE</string>
    <string name="goals">GOALS</string>
    <string name="login">login</string>
    <string name="password">  password</string>
    <string name="email_address">  email address</string>
    <string name="welcome_massage">Hello, welcome back</string>
    <string name="logo_name">MINIMALIST</string>
    <string name="sign_in">sign in</string>
    <string name="hai_welcome">Hello, welcome</string>
    <string name="initial_count">0</string>
    <string name="team_2">team 2</string>
    <string name="plus_button">Plus Button</string>
    <string name="team_1">team 1</string>
    <string name="minus_button">Minus Button</string>
    <string name="appbar_scrolling_view_behavior">appbar scrolling view behavior</string>
    <string name="gallery">gallery</string>
    <string name="slideshow">slideshow</string>
    <string name="tools">tools</string>
    <string name="import_nih">import nih</string>
    <string name="communicate">communicate</string>
    <string name="share">share</string>
    <string name="send">send</string>
    <string name="nav_header_subtitle">Hidup sederhana dan bahagia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>

    <string name="title_placeholder">Title</string>
    <string name="news_placeholder">News</string>
    <string name="sports_info_placeholder">Here is some news</string>
    <string name="subtitle_detail_text">Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Praesent ultrices congue rutrum.
        Phasellus elementum ipsum ac convallis aliquam. Suspendisse eleifend
        eros a enim faucibus mollis. Nunc placerat, est vitae vestibulum
        blandit, dolor diam fringilla tellus, eu euismod mauris neque
        at neque.</string>
    <string name="ready_to_start_work">Im ready to start work</string>
    <string name="start_task">start task</string>
    <string name="napping">\"Napping...\"</string>
    <string name="instructions">Enter a book name to find out who wrote the book.
</string>
    <string name="button_text">Search Books</string>
    <string name="input_hint">Book Title</string>
    <string name="no_results" />
    <string name="send_custom_broadcast">Send Custom Broadcast</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="action_settings">Settings</string>
    <string name="sukses">The key behind successfull people is good habit, a habit can create in 21 days, and become a life style in 90 days</string>
    <string name="title_activity_maps">Map</string>
    <string name="tujuan">what can aplication to do? This application help you to improve productivity everyday. with some easy ways</string>
    <string name="tujuan_1">You can start making new habits starting now, looking for a place to exercise around you and can reflect yourself with our diary.</string>
    <string name="our_vision">Our vision is to make the present generation more careful in using their daily time with this application, and it is hoped that it will be able to increase the productivity of today\'s millenials.</string>
    <string name="coverawal">So, lets start your good habbit</string>
    <string name="visikami">Our Vision</string>
    <string name="judul_isi_diary">Tell me your story</string>
    <string name="save">save</string>
    <string name="judul_feel">What do you feel?</string>
    <string name="cancel">cancel</string>
    <string name="letsmove">lets move your body now!</string>
    <string name="healty_food">healty food, healty you</string>
    <string name="start_massage">start productive, and change your life</string>
    <string name="textview">TextView</string>
    <string name="my_day">My day :</string>
    <string name="my_feel">My feel</string>
    <string name="description">Description</string>
    <string name="time_to_do">Time to do</string>
    <string name="register">Register</string>
    <string name="start_make_habit">START MAKE HABIT</string>
    <string name="create_new_diary">CREATE NEW DIARY</string>
    <string name="create_new_habit">CREATE NEW HABIT</string>
    <string name="about_us">About Us</string>
    <string name="version">Version</string>
    <string name="nama">Nama</string>
    <string name="v_1_0">V 1.0</string>
    <string name="habit_name">Habit Name</string>
    <string name="time">Time</string>
    <string name="version_1_0">version 1.0</string>
    <string name="details">Details</string>
    <string name="hello_millennials">Hello, Millennials !</string>
    <string name="let_s_be_productive">Let\'s be productive</string>
    <string name="notif">Show Notification Details Here...</string>
</resources>
