<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/gradient1">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="30dp"
        android:background="@drawable/white_rounded">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/welcomesignin"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/peach"/>

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/hai_welcome"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address"
                android:textSize="15sp"
                android:textStyle="italic"
                android:drawableRight="@drawable/email"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/nama"
                android:inputType="textPersonName"
                android:textSize="15sp"
                android:textStyle="italic"
                android:drawableRight="@drawable/user"/>

            <EditText
                android:id="@+id/Password"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:textStyle="italic"
                android:drawableRight="@drawable/lock"/>

            <Button
                android:id="@+id/btn_signin1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/register"
                android:background="@drawable/rounded_button"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>