<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".Login"
    android:background="@drawable/gradient1">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/white_rounded"
        android:layout_margin="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">


            <ImageView
                android:id="@+id/logologin"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/peach"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/welcome_massage"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                android:textStyle="italic"
                android:backgroundTint="@color/colorPrimary"
                android:drawableRight="@drawable/email"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:textStyle="italic"
                android:backgroundTint="@color/colorPrimary"
                android:drawableRight="@drawable/lock"/>

            <Button
                android:id="@+id/btn_login1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/login"
                android:background="@drawable/rounded_button"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/btn_signin0"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginBottom="20dp"
                android:background="@drawable/white_rounded"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>