<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".UpdateHabit"
                android:background="@android:color/white">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habit_name"
                android:textSize="15sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/update_nama_habit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="text">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/update_deskripsi_habit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:backgroundTint="@color/colorPrimary"
                android:maxLength="255"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/time"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/update_waktu_habit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="time"/>

            <Button
                android:id="@+id/button1"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/save"
                android:background="@drawable/rounded_button"
                android:textSize="13sp"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/cancel"
                android:textSize="13sp"
                android:background="@drawable/white_rounded"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>