<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BuatHabit"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/judul_isi_diary"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/isi_diary"
                android:layout_width="380dp"
                android:layout_height="119dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="textMultiLine"
                android:textSize="15sp">

                <requestFocus />
            </EditText>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/judul_feel"
                    android:textStyle="bold"
                    android:layout_margin="20dp"
                    android:textSize="15sp"/>

                <Spinner
                    android:id="@+id/spinner_diary"
                    android:entries="@array/array_spinner_diary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:textSize="15sp"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>


            <Button
                android:id="@+id/button1"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/save"
                android:background="@drawable/rounded_button"
                android:textSize="13sp"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/cancel"
                android:textSize="13sp"
                android:background="@drawable/white_rounded"/>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>