<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LihatHabit"
    android:background="@drawable/gradient1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">


            <TextView
                android:id="@+id/timestamp_diary"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/textview"
                android:paddingTop="10dp"
                android:textAlignment="center"
                android:background="@drawable/white_rounded"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/my_day"
                android:textAlignment="center"
                android:paddingTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/deskripsi_diary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="20dp"
                android:text="@string/textview"
                android:background="@drawable/white_rounded"/>

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:text="@string/my_feel"
                android:paddingTop="10dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/perasaan_diary"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:paddingTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/textview"/>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>